# checklistfabrik

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  requirements.in  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: codeql.yml  docs.yml  pre-commit-autoupdate.yml  release.yml  scorecard.yml  test.yml
docs/: checklist_syntax.md  index.md  jinja_globals.md  user_guide.md
examples/: README.md  builtin-modules-showcase.yml  demo-deploy-keycloak.yml  demo-takeoff-checklist.yml  feature-showcase.yml  import-additional-pages.yml  import-showcase.yml  import_additional_pages.yml  import_additional_tasks.yml  update-icinga.yml
examples/reports/: README.md
examples/templates/: builtin-modules-showcase.yml  demo-deploy-keycloak.yml  demo-takeoff-checklist.yml  feature-showcase.yml  import-additional-tasks.yml  import-showcase.yml  run-template-target.yml
src/checklistfabrik/core/: __init__.py  __main__.py  checklist_data_mapper.py  checklist_wsgi_app.py  checklist_wsgi_server.py  dashboard_wsgi_app.py  markdown.py  spawner.py  utils.py
src/checklistfabrik/core/cli/: base_cli.py  play.py
src/checklistfabrik/core/models/: __init__.py  checklist.py  page.py  task.py
src/checklistfabrik/core/templates/: __init__.py  base.html.j2  checklist.html.j2  dashboard.html.j2  done.html.j2  navigation_bar.html.j2  required_indicator.html.j2  shutdown.html  shutdown.html.j2  steps.html.j2
src/checklistfabrik/core/templates/assets/: style.css
src/checklistfabrik/core/templates/assets/css/: style.css
src/checklistfabrik/modules/linuxfabrik/clf/: checkbox_input.py  html.py  import.py  markdown.py  radio_input.py  run_template.py  select_input.py  text.py  text_input.py  text_output.py  textarea_input.py
tests/: conftest.py  test_checklist_data_mapper.py  test_markdown.py  test_models.py  test_modules.py  test_utils.py  test_wsgi_app.py
tools/: build-docs
