[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "checklistfabrik"
authors = [
    { name = "Linuxfabrik GmbH, Zurich, Switzerland", email = "info@linuxfabrik.ch" },
]
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]
description = "ChecklistFabrik is a Python 3 tool to simplify and automate process management using HTML checklists backed by YAML files."
dynamic = [
    "dependencies",
    "version",
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"

[project.urls]
Download = "https://github.com/linuxfabrik/checklistfabrik/releases/"
Homepage = "https://github.com/linuxfabrik/checklistfabrik/"
Source = "https://github.com/linuxfabrik/checklistfabrik/"
Tracker = "https://github.com/linuxfabrik/checklistfabrik/issues/"

[tool.pip-tools]
generate-hashes = true

[tool.setuptools.dynamic]
dependencies = { file = "requirements.in" }
version = { attr = "checklistfabrik.core.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = [
    "pytest",
]

[project.scripts]
clf-play = "checklistfabrik.core.cli.play:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "B",    # flake8-bugbear (potential bugs)
    "C4",   # flake8-comprehensions
    "E",    # pycodestyle errors
    "F",    # pyflakes (logic errors)
    "I",    # isort (import sorting)
    "RUF",  # Ruff-specific rules
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade (modernize syntax for py39+)
    "W",    # pycodestyle warnings
]
ignore = [
    "E501",   # line too long (handled by code review, not auto-enforcement)
    "UP009",  # UTF-8 encoding declaration (we keep our standard file header)
    "UP015",  # redundant open() mode (we keep explicit modes for clarity)
]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.bandit]
# B110 (try/except/pass) and B112 (try/except/continue): intentional patterns
# for graceful degradation.
# B311 (pseudo-random): not used for cryptographic purposes.
skips = ["B110", "B112", "B311"]
